# cansync

./: README.md  pyproject.toml  requirements.txt  setup.py
cansync/: api.py  const.py  errors.py  main.py  settings.py  sync.py  types.py  utils.py
cansync/tui/: settings.py  sync.py
src/cansync/: __init__.py  api.py  const.py  main.py  types.py  utils.py
src/cansync/tui/: __init__.py  newui.py  settings.py  shared.py  sync.py
tests/: conftest.py  test_api.py  test_utils.py
tests/files/: config_1.toml  config_2.toml  config_3.toml
tests/files/LC-Artificial-Intelligence-1/Week-5:-February-12th,-2024/Week-5-Materials-and-Exercises/: 100pos_100neg_tweets.arff  house8.arff  weather.arff
tests/files/LC-Artificial-Intelligence-1/Week-6:-February-19th,-2024-(Consolidation)/Week-6-Materials-and-Exercises/: W6.2_exercises1.ipynb  W6.2_exercises2.ipynb
tests/files/LC-Artificial-Intelligence-1/Week-7:-February-26th,-2024/Week-7-Materials-and-Exercises/: week7_Tutorial_solution.ipynb
